--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <script>
   // Nome do arquivo no MESMO diretório do HTML
-  const arquivo = "1.apk"; // troque pelo nome real
+  const arquivo = "app.apk"; // troque pelo nome real
   const link = document.createElement("a");
   link.href = arquivo;
   link.download = arquivo;
