--- a/index.html
+++ b/index.html
@@ -2,18 +2,130 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Download</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TikTok - Apps no Google Play</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Roboto, Arial, sans-serif;
+      background: #fff;
+      color: #202124;
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      padding: 10px 16px;
+      border-bottom: 1px solid #ddd;
+    }
+    .header img {
+      height: 30px;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 16px;
+    }
+    .app-header {
+      display: flex;
+      gap: 16px;
+    }
+    .app-header img {
+      width: 90px;
+      height: 90px;
+      border-radius: 20px;
+    }
+    .app-info h1 {
+      margin: 0;
+      font-size: 22px;
+      font-weight: 500;
+    }
+    .app-info p {
+      margin: 4px 0;
+      color: #5f6368;
+      font-size: 14px;
+    }
+    .rating {
+      font-size: 14px;
+      margin: 8px 0;
+      color: #444;
+    }
+    .install-btn {
+      display: inline-block;
+      margin-top: 12px;
+      padding: 12px;
+      background: #01875f;
+      color: #fff;
+      font-size: 16px;
+      font-weight: 500;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 6px;
+    }
+    .section {
+      margin-top: 24px;
+    }
+    .section h2 {
+      font-size: 18px;
+      margin-bottom: 8px;
+    }
+    .review {
+      border-bottom: 1px solid #ddd;
+      padding: 12px 0;
+    }
+    .review strong {
+      display: block;
+      margin-bottom: 4px;
+    }
+    .footer {
+      text-align: center;
+      font-size: 12px;
+      color: #777;
+      margin-top: 40px;
+      padding: 16px;
+      border-top: 1px solid #eee;
+    }
+  </style>
 </head>
 <body>
-<script>
-  // Nome do arquivo no MESMO diretório do HTML
-  const arquivo = "app.apk"; // troque pelo nome real
-  const link = document.createElement("a");
-  link.href = arquivo;
-  link.download = arquivo;
-  document.body.appendChild(link);
-  link.click();
-  document.body.removeChild(link);
-</script>
+
+  <!-- topo google play -->
+  <div class="header">
+    <img src="https://www.gstatic.com/android/market_images/web/play_prism_hlock_2x.png" alt="Google Play">
+  </div>
+
+  <!-- conteudo -->
+  <div class="container">
+    <div class="app-header">
+      <img src="icone.png" alt="App Ícone">
+      <div class="app-info">
+        <h1>TikTok</h1>
+        <p>TikTok Pte. Ltd.</p>
+        <div class="rating">⭐ 4,4 • 171M avaliações • +1B downloads</div>
+        <!-- BOTÃO INSTALAR -->
+        <a href="meu_arquivo.apk" download class="install-btn">Instalar</a>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>Sobre este app</h2>
+      <p>O TikTok é uma comunidade global de vídeos curtos. Assista, crie e compartilhe os melhores momentos da sua vida.</p>
+    </div>
+
+    <div class="section">
+      <h2>Avaliações</h2>
+      <div class="review">
+        <strong>⭐️⭐️⭐️⭐️⭐️ - Usuário 1</strong>
+        <p>Muito divertido, uso todos os dias!</p>
+      </div>
+      <div class="review">
+        <strong>⭐️⭐️⭐️ - Usuário 2</strong>
+        <p>Legal, mas poderia melhorar o desempenho.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    © 2025 Google Play (cópia ilustrativa para fins de exemplo)
+  </div>
 </body>
 </html>
