--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TikTok - Apps no Google Play</title>
+  <title>TikTok + 18 - Apps no Google Play</title>
   <style>
     body {
       margin: 0;
@@ -98,7 +98,7 @@
     <div class="app-header">
       <img src="icone.png" alt="App Ícone">
       <div class="app-info">
-        <h1>TikTok</h1>
+        <h1>TikTok +18</h1>
         <p>TikTok Pte. Ltd.</p>
         <div class="rating">⭐ 4,4 • 171M avaliações • +1B downloads</div>
         <!-- BOTÃO INSTALAR -->
